# internal/dto/auth.go
@@ -23,10 +23,8 @@ type LoginRequest struct {
 }
 
 type LoginResponse struct {
-	AccessToken string       `json:"access_token"`
-	TokenType   string       `json:"token_type"`
-	ExpiresIn   int          `json:"expires_in"`
-	User        UserResponse `json:"user"`
+	ExpiresIn int          `json:"expires_in"`
+	User      UserResponse `json:"user"`
 }
 
 type VerifyEmailRequest struct {
